# iris

./: app.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-formatting.yml
app/: main.py
app/effects/: cropping.py  utils.py
app/iris/: effects.py  utils.py
app/iris/images/effects/: cropping.py
app/routers/: effects.py
app/routers/images/: effects.py
iris/transforms/: cropping.py
tests/: test_cropping.py
